<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:background="@color/epathshala_logo">

    <TextView
        android:id="@+id/tv_admissionno"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:text="Admission No."
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FDFCC3"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,RtlHardcoded"/>

    <TextView
        android:id="@+id/tv_studentname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tv_admissionno"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="115dp"
        android:text="@string/student_name_2"
        android:textColor="#FDFCC3"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_studentname"
        android:layout_marginLeft="115dp"
        android:text="Class"
        android:textColor="#FDFCC3"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,RtlHardcoded"/>

    <TextView
        android:id="@+id/tv_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_studentname"
        android:text="@string/date_of_birth_2"
        android:textColor="#FDFCC3"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tv_studentAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_class"
        android:layout_marginLeft="115dp"
        android:paddingTop="0dp"
        android:text="@string/student_address_2"
        android:textColor="#FDFCC3"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tv_studentMobileno"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_studentAdd"
        android:layout_marginLeft="115dp"
        android:text="@string/mobile_no_2"
        android:textColor="#FDFCC3"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <ImageView
        android:id="@+id/iv_student_photo_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/student_photo"
        android:scaleType="center"
        android:src="@drawable/boy"
        tools:ignore="RtlHardcoded"/>

</RelativeLayout>
