<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:background="@color/epathshala_logo">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_student_photo_round"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/boy"
            app:riv_border_color="?android:attr/colorPrimaryDark"
            app:riv_border_width="2dp"
            app:riv_corner_radius="50dp"
            app:riv_mutate_background="true"
            app:riv_tile_mode="clamp"
            tools:ignore="RtlHardcoded"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_admissionno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Admission No."
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FDFCC3"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <TextView
                android:id="@+id/tv_studentname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name_2"
                android:textColor="#FDFCC3"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Class"
                    android:textColor="#FDFCC3"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_DOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth_2"
                    android:textColor="#FDFCC3"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_studentAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/student_address_2"
                android:textColor="#FDFCC3"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_studentMobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no_2"
                android:textColor="#FDFCC3"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignRight="@+id/l1"
        android:layout_below="@+id/l1"
        android:background="@color/colorPrimary"
        android:text="@string/change_account"
        android:textColor="@color/button_text_color" />

</RelativeLayout>
